<resources>
    <string name="app_name">Kit Inventory App</string>
    <string name="action_settings">Settings</string>
    <string name="main_page_title">Kit Inventory App</string>
    <string name="add_item_button">Add Item</string>
    <string name="view_stock_button">View Stock</string>
    <string name="delete_stock_button">Delete Stock</string>
    <string name="add_stock_button">Add Stock</string>
    <string name="action_main_page">Main Page</string>
    <string name="view_stock_title">Current Stock</string>
    <string name="no_items_in_stock">Please add items on the add items page.</string>
    <string name="add_stock_title">Add Stock</string>
    <string name="name_hint">Name of item</string>
    <string name="size_hint">Size: S/M/L</string>
    <string name="price_hint">Price</string>
    <string name="quantity_hint">Quantity</string>
    <string name="add_photo_button">Add Photo</string>
    <string name="amend_stock_button">Amend Stock</string>
    <string name="amend_stock_title">Amend Stock</string>
    <string name="picture_description">Picture of Stock</string>
    <string name="test_description">Hockey shorts</string>
    <string name="test_price">$24.99</string>
    <string name="refresh">Refresh</string>
    <string name="detail_name">Example name</string>
    <string name="detail_size">example size</string>
    <string name="detail_qty">example quantity</string>
    <string name="detail_price">example price</string>
    <string name="minus_button">-</string>
    <string name="quantity_edit">0</string>
    <string name="plus_button">+</string>
    <string name="sell_button">sell</string>
    <string name="delete_all_button">delete item</string>
    <string name="test_qty">4</string>
    <string name="list_item_button">sell 1</string>
    <string name="description_title">Item Name</string>
    <string name="qty_title">Qty</string>
    <string name="price_title">Price</string>
    <string name="picture_of_item">Picture of item</string>
    <string name="order_more_button">Order more</string>
    <string name="receive_more_button">receive stock</string>
    <string name="sell_one">Sell 1</string>
</resources>
