<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add_item_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/list_item_background"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context="com.wonkydan.kitinventoryapp.AddStockActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="88dp"
        android:background="@color/page_background"
        android:gravity="center"
        android:text="@string/add_stock_title"
        android:textAlignment="gravity"
        android:textAllCaps="true"
        android:textColor="@color/page_title"
        android:textSize="32sp" />

    <EditText
        android:id="@+id/add_item_name_entered"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:background="@color/edit_text_colour"
        android:hint="@string/name_hint"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:padding="12dp" />

    <EditText
        android:id="@+id/add_item_size_entered"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:background="@color/edit_text_colour"
        android:hint="@string/size_hint"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:padding="12dp" />

    <EditText
        android:id="@+id/add_item_price_entered"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:background="@color/edit_text_colour"
        android:hint="@string/price_hint"
        android:imeOptions="actionDone"
        android:inputType="numberDecimal"
        android:padding="12dp" />

    <EditText
        android:id="@+id/add_item_quantity_entered"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:background="@color/edit_text_colour"
        android:hint="@string/quantity_hint"
        android:imeOptions="actionDone"
        android:inputType="number"
        android:padding="12dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/add_photo_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/add_photo_button" />

        <Button
            android:id="@+id/add_item_stock_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/add_stock_button" />
    </LinearLayout>


</LinearLayout>
