<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/page_background"
    android:orientation="vertical"
    tools:context="com.wonkydan.kitinventoryapp.ViewStockActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="88dp"
        android:gravity="center"
        android:text="@string/view_stock_title"
        android:textAlignment="gravity"
        android:textAllCaps="true"
        android:textColor="@color/page_title"
        android:textSize="32sp" />

    <Button
        android:id="@+id/refresh_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:paddingBottom="8dp"
        android:text="@string/refresh" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="4dp">

        <TextView
            android:id="@+id/item_description"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/description_title"
            android:textColor="@color/page_title" />

        <TextView
            android:id="@+id/item_qty"
            android:layout_width="88dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/qty_title"
            android:textColor="@color/page_title" />

        <TextView
            android:id="@+id/item_price"
            android:layout_width="88dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/price_title"
            android:textColor="@color/page_title" />
    </LinearLayout>


    <ListView
        android:id="@+id/current_stock_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@color/page_title"
        android:dividerHeight="2dp" />

    <TextView
        android:id="@android:id/empty"
        android:layout_width="match_parent"
        android:layout_height="88dp"
        android:paddingEnd="6dp"
        android:paddingLeft="6dp"
        android:paddingRight="6dp"
        android:paddingStart="6dp"
        android:text="@string/no_items_in_stock"
        android:textAlignment="gravity"
        android:textAllCaps="false"
        android:textColor="@color/page_title" />

</LinearLayout>
