<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="88dp"
    android:background="@color/list_item_background"
    android:padding="2dp">

    <!-- todo add a button to sell an item-->
    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/test_description"
        android:id="@+id/item_description"
        android:textColor="@color/page_title"
        android:gravity="center"/>
    <TextView
        android:layout_width="88dp"
        android:layout_height="match_parent"
        android:text="@string/test_qty"
        android:id="@+id/item_qty"
        android:textColor="@color/page_title"
        android:gravity="center"/>
    <TextView
        android:layout_width="88dp"
        android:layout_height="match_parent"
        android:text="@string/test_price"
        android:id="@+id/item_price"
        android:textColor="@color/page_title"
        android:gravity="center"/>

</LinearLayout>